@@ -151,6 +151,9 @@ t/makemethods-db.t
 t/makemethods.t
 t/multi-pk-sequences.t
 t/pod.t
+t/sandbox/code-gen/generated-perl-test.pl
+t/sandbox/code-gen/lib/.placeholder
+t/sandbox/code-gen/make-modules.pl
 t/sandbox/convention/convention-test-auto.pl
 t/sandbox/convention/convention-test-loader.pl
 t/sandbox/convention/convention-test.pl
